--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
+  fqdn: p5-web.meiamso.me
   keep-history: true
   local-dir: dist/
   on:
