--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,11 @@ node_modules
 src/templates/pages/examples/*
 src/offline-reference
 !src/templates/pages/examples/.gitkeep
-dist/download/version.json
+dist/
+!dist/assets/
 dist/assets/js/p5.min.js
 dist/assets/js/p5.dom.min.js
 dist/assets/js/p5.sound.min.js
+dist/download/version.json
 learn/books/*
 git-pull.php
